install playwright driver seperate + fixes

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -2,7 +2,9 @@ PUID={{ changedetection_uid }}
 PGID={{ changedetection_gid }}
 
 BASE_URL={{ changedetection_base_url }}
+{% if changedetection_playwright_driver_url != '' %}
 PLAYWRIGHT_DRIVER_URL={{ changedetection_playwright_driver_url }}
+{% endif %}
 
 {% if changedetection_http_proxy != '' %}
 HTTP_PROXY={{ changedetection_http_proxy }}
