Make the project compliant with REUSE
Note the project has been released under Apache 2.0 (ebd57d6956ab8cf00d86364ac3d7aa9fec4df32a), although I am not really conviced if it was a legitimate move considering the fact that the much of the source code seem to be based on the other role released under AGPL-3.0-or-later.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Niels Bouma
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 {% if changedetection_container_labels_traefik_enabled %}
 {% if changedetection_container_labels_traefik_docker_network %}
 traefik.docker.network={{ changedetection_container_labels_traefik_docker_network }}
