--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Niels Bouma
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 PUID={{ changedetection_uid }}
 PGID={{ changedetection_gid }}
 
