--- a/templates/playwright-env.j2
+++ b/templates/playwright-env.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Niels Bouma
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 SCREEN_WIDTH=1920
 SCREEN_HEIGHT=1024
 SCREEN_DEPTH=16
