--- a/templates/systemd/changedetection-playwright-driver.service.j2
+++ b/templates/systemd/changedetection-playwright-driver.service.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Niels Bouma
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 [Unit]
 Description=Changedetection.io Playwright driver ({{ changedetection_playwright_driver_identifier }})
 {% for service in changedetection_playwright_driver_systemd_required_services_list %}
