--- a/templates/systemd/changedetection.service.j2
+++ b/templates/systemd/changedetection.service.j2
@@ -26,7 +26,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
 			--cap-drop=ALL \
 			--read-only \
 			--network={{ changedetection_container_network }} \
-			{% if changedetection_container_http_bind_port != '' %}
+			{% if changedetection_container_http_bind_port %}
 			-p {{ changedetection_container_http_bind_port }}:{{ changedetection_container_http_port }} \
 			{% endif %}
 			--env-file={{ changedetection_base_path }}/env \
