Update install.yml: the task to self-build the container image
Reuse https://codeberg.org/acioustick/ansible-role-joplin-server/src/commit/02e5b91a89e6b83e22023d66ba9df39f7fa9dc5b/tasks/install.yml.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/systemd/changedetection.service.j2
+++ b/templates/systemd/changedetection.service.j2
@@ -33,7 +33,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --label-file={{ changedetection_base_path }}/labels \
       --mount type=bind,src={{ changedetection_data_dir_path }},dst=/datastore \
       --tmpfs=/tmp:rw,noexec,nosuid,size=128m \
-      {{ changedetection_container_image }}
+      {{ changedetection_container_image_self_build_name if changedetection_container_image_self_build else changedetection_container_image }}
 
 {% for network in changedetection_container_additional_networks %}
 ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} network connect {{ network }} {{ changedetection_identifier }}
