Update labels.j2: use the common expression for redirectregex
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -16,7 +16,7 @@ traefik.docker.network={{ changedetection_container_labels_traefik_docker_networ
 {% set middlewares = [] %}
 
 {% if changedetection_container_labels_traefik_path_prefix != '/' %}
-traefik.http.middlewares.{{ changedetection_identifier }}-slashless-redirect.redirectregex.regex=({{ changedetection_container_labels_traefik_path_prefix | quote }})$
+traefik.http.middlewares.{{ changedetection_identifier }}-slashless-redirect.redirectregex.regex=^({{ changedetection_container_labels_traefik_path_prefix | quote }})$
 traefik.http.middlewares.{{ changedetection_identifier }}-slashless-redirect.redirectregex.replacement=${1}/
 {% set middlewares = middlewares + [changedetection_identifier + '-slashless-redirect'] %}
 {% endif %}
