--- a/templates/systemd/changedetection-playwright-driver.service.j2
+++ b/templates/systemd/changedetection-playwright-driver.service.j2
@@ -13,6 +13,9 @@ Description=Changedetection.io Playwright driver ({{ changedetection_playwright_
 Requires={{ service }}
 After={{ service }}
 {% endfor %}
+{% for service in changedetection_playwright_driver_systemd_wanted_services_list %}
+Wants={{ service }}
+{% endfor %}
 DefaultDependencies=no
 
 [Service]
