Add environment variable for timezone
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -6,6 +6,7 @@ SPDX-License-Identifier: Apache-2.0
 
 PUID={{ changedetection_uid }}
 PGID={{ changedetection_gid }}
+TZ={{ changedetection_environment_variables_tz }}
 
 BASE_URL={{ changedetection_base_url }}
 {% if changedetection_playwright_driver_url != '' %}
