--- a/templates/playwright-env.j2
+++ b/templates/playwright-env.j2
@@ -4,6 +4,8 @@ SPDX-FileCopyrightText: 2023 Niels Bouma
 SPDX-License-Identifier: Apache-2.0
 #}
 
+TZ={{ changedetection_playwright_driver_environment_variables_tz }}
+
 SCREEN_WIDTH=1920
 SCREEN_HEIGHT=1024
 SCREEN_DEPTH=16
