Update configuration for Traefik's additional labels
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -57,4 +57,6 @@ traefik.http.routers.{{ changedetection_identifier }}.tls.certResolver={{ change
 traefik.http.services.{{ changedetection_identifier }}.loadbalancer.server.port={{ changedetection_container_http_port }}
 {% endif %}
 
-{{ changedetection_container_labels_additional_labels }}
+{% for arg in changedetection_container_labels_additional_labels %}
+{{ arg }}
+{% endfor %}
