--- a/templates/systemd/changedetection-playwright-driver.service.j2
+++ b/templates/systemd/changedetection-playwright-driver.service.j2
@@ -33,7 +33,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --read-only \
       --network={{ changedetection_container_network }} \
       --env-file={{ changedetection_base_path }}/playwright-env \
-      --tmpfs=/tmp:rw,noexec,nosuid,size=512m \
+      --tmpfs=/tmp:rw,noexec,nosuid,size={{ changedetection_playwright_driver_container_tmpfs_tmp_size }} \
       {{ changedetection_playwright_driver_container_image }}
 
 {% for network in changedetection_playwright_driver_container_additional_networks %}
